animation collapse fixed

--- a/src/styles/components/collapse.scss
+++ b/src/styles/components/collapse.scss
@@ -1,7 +1,8 @@
 .collapse {
 	position: relative;
 	overflow: hidden;
-	background-color: rgba(246, 246, 246, 0.45);
+	// background-color: rgba(246, 246, 246, 0.45);
+	background-color: red;
 	border-radius: 5px;
 
 	.arrow-up {
@@ -49,6 +50,19 @@
 }
 .description-container {
 	overflow: hidden;
+	animation: heighty 0.7s linear;
+	height: fit-content;
+	@keyframes heighty {
+		0% {
+			max-height: 0px;
+		}
+		50% {
+			max-height: 100px;
+		}
+		100% {
+			max-height: 200px;
+		}
+	}
 }
 .description-collapse {
 	margin: 13px 20px 20px 20px;
@@ -86,6 +100,7 @@
 		font-size: 24px;
 		height: 52px;
 		border-radius: 10px;
+		padding-left: 15px;
 	}
 
 	.description-collapse {
